<resources>
	<string name="app_name">Steve Interview</string>
	<string name="network_error">Network Error</string>
	<string name="network_error_retry">Please reconnect to the internet and try again.</string>
	<string name="unexpected_error_occurred_body">An error has occurred during your operation, please contact support.</string>
	<string name="alert_error_title">Something went wrong!</string>
	<string name="alert_error_title_relaxed">Something went wrong.</string>
	<string name="please_try_again">Please try again</string>
	<string name="ok">OK</string>
	<string name="about_fragment">About Fragment</string>
	<string name="about_content">Insert some text about the app eventually</string>
	<string name="current_weather">Current Weather</string>
	<string name="local_time">Local Time:</string>
	<string name="temp">Temperature:</string>
	<string name="maxtemp">Max Temperature:</string>
	<string name="mintemp">Min Temperature:</string>
	<string name="temp_F"> F</string>
	<string name="temp_C"> C</string>
	<string name="condition">Condition:</string>
	<string name="wind_direction">Wind Direction:</string>
	<string name="wind_speed">Wind Speed:</string>
	<string name="wind_speed_MPH">MPH</string>
	<string name="wind_speed_KPH">KPH</string>
	<string name="go">Go</string>
	<string name="enter_zip_or_city">Enter Zip or City</string>
	<string name="refresh">Refresh</string>
	<string name="see_forecast">See Forecast</string>
	<string name="settings">Settings</string>
	<string name="please_enter_zip_or_city">Please enter a zip code or a city.</string>
	<string name="imperial">Imperial</string>
	<string name="metric">Metric</string>
	<string name="units">Units:</string>
	<string name="name">Name</string>
	<string name="date">Date:</string>
	<string name="forecast">Forecast</string>
	<string name="error_occurred_retrieving_weather_information">Error occurred retrieving weather information.</string>
	<string name="min_temperature">Min Temperature:</string>
	<string name="max_temperature">Max Temperature:</string>
</resources>
