<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<data>

	</data>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			tools:ignore="MissingConstraints">

		<TextView
			android:id="@+id/titles"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:textSize="24sp"
			android:padding="5dp"
			android:text="@string/settings"
			app:layout_constraintStart_toStartOf="parent"
			tools:ignore="MissingConstraints" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			tools:ignore="MissingConstraints">

			<TextView
				android:id="@+id/tv_units"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/units"
				app:layout_constraintTop_toTopOf="@id/rd_group"
				app:layout_constraintBottom_toBottomOf="@id/rd_group"
				app:layout_constraintStart_toStartOf="parent"/>

			<RadioGroup
				android:id="@+id/rd_group"
				android:layout_width="190dp"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginStart="16dp"
				android:dividerPadding="8dp"
				android:showDividers="middle"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toEndOf="@id/tv_units"
				app:layout_constraintEnd_toEndOf="parent">

				<RadioButton
					android:id="@+id/radiobtn_imperial"
					android:layout_width="108dp"
					android:layout_height="wrap_content"
					android:text="@string/imperial" />

				<RadioButton
					android:id="@+id/radiobtn_metric"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/metric" />

			</RadioGroup>

			</LinearLayout>
		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>