<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	<data>
		<variable
			name="viewData"
			type="com.png.interview.weather.ui.model.AvailableWeatherViewData" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="200dp"
		app:visible="@{viewData != null}"
		tools:padding="16dp">

		<TextView
			android:id="@+id/tv_name_label"
			style="@style/TextViewLabelStyle"
			android:text="@string/name"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="parent" />

		<TextView
			android:id="@+id/tv_name_value"
			style="@style/TextViewValueStyle"
			android:text="@{viewData.name}"
			app:layout_constraintBottom_toBottomOf="@id/tv_name_label"
			app:layout_constraintStart_toEndOf="@id/tv_name_label"
			app:layout_constraintTop_toTopOf="@id/tv_name_label"
			tools:text="Syracuse" />

		<TextView
			android:id="@+id/tv_time_label"
			style="@style/TextViewLabelStyle"
			android:text="@string/local_time"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tv_name_label" />

		<TextView
			android:id="@+id/tv_time_value"
			style="@style/TextViewValueStyle"
			android:text="@{viewData.date}"
			app:layout_constraintBottom_toBottomOf="@id/tv_time_label"
			app:layout_constraintStart_toEndOf="@id/tv_time_label"
			app:layout_constraintTop_toTopOf="@id/tv_time_label"
			tools:text="8-21-2021 7:00 pm" />


		<TextView
			android:id="@+id/tv_min_temp_label"
			style="@style/TextViewLabelStyle"
			android:text="@string/maxtemp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tv_time_label" />

		<TextView
			android:id="@+id/tv_min_temp_value"
			style="@style/TextViewValueStyle"
			android:text="@{viewData.temperature}"
			app:layout_constraintBottom_toBottomOf="@id/tv_min_temp_label"
			app:layout_constraintStart_toEndOf="@id/tv_min_temp_label"
			app:layout_constraintTop_toTopOf="@id/tv_min_temp_label"
			tools:text="95F" />

		<TextView
			android:id="@+id/tv_max_temp_label"
			style="@style/TextViewLabelStyle"
			android:text="@string/maxtemp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tv_min_temp_label" />

		<TextView
			android:id="@+id/tv_max_temp_value"
			style="@style/TextViewValueStyle"
			android:text="@{viewData.temperature}"
			app:layout_constraintBottom_toBottomOf="@id/tv_max_temp_label"
			app:layout_constraintStart_toEndOf="@id/tv_max_temp_label"
			app:layout_constraintTop_toTopOf="@id/tv_max_temp_label"
			tools:text="95F" />


		<TextView
			android:id="@+id/tv_wind_speed"
			style="@style/TextViewLabelStyle"
			android:text="@string/wind_speed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tv_max_temp_label" />

		<TextView
			android:id="@+id/tv_wind_speed_value"
			style="@style/TextViewValueStyle"
			android:text="@{viewData.windSpeed}"
			app:layout_constraintBottom_toBottomOf="@id/tv_wind_speed"
			app:layout_constraintStart_toEndOf="@id/tv_wind_speed"
			app:layout_constraintTop_toTopOf="@id/tv_wind_speed"
			tools:text="15 MPH" />

		<TextView
			android:id="@+id/tv_condition"
			style="@style/TextViewLabelStyle"
			android:text="@string/condition"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_wind_speed" />

		<TextView
			android:id="@+id/tv_condition_value"
			style="@style/TextViewValueStyle"
			android:text="@{viewData.condition}"
			app:layout_constraintBottom_toBottomOf="@id/tv_condition"
			app:layout_constraintStart_toEndOf="@id/tv_condition"
			app:layout_constraintTop_toTopOf="@id/tv_condition"
			tools:text="Partly Cloudy" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>